--- a/frontend/sms/package.json
+++ b/frontend/sms/package.json
@@ -33,7 +33,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "http://18.219.202.94/frontend/sms/src"
-  }
+    ]
+  },
+  "homepage": "http://18.220.211.136/frontend/"
 }
