--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "reactjs-popup": "^2.0.5",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.1.2"
   },
